<resources>
    <string name="app_name">Stopwatch</string>
    <string name="_00_00">00:00</string>
    <string name="start">Start</string>
    <string name="flag">Flag</string>
    <string name="stop">Stop</string>
    <string name="time">Time</string>
    <string name="lap_time">Lap Time</string>
    <string name="Pause">Pause</string>
    <string name="Lap">Lap</string>
    <string name="clear_lap">Clear Lap</string>
    <string name="zero_time">00:00</string>
</resources>